Refactor AI components and update dependencies
Replaces VectorDatabase with SqliteVecStore and VectorRow, refactors vector handling and chunking logic, and updates GPT utility functions. Removes unused GPTCommands and related command references, adds ARTIFICIAL_INTELLIGENCE toggle to Settings, and updates dependencies including OpenAI and DJL versions. Also fixes minor issues and improves boundary detection in chunking.